# Nauja

./: CMakeLists.txt  README.md  data.cpp  data.h  functions.cpp  functions.h  main.cpp
1_strategija/: data.cpp  functions.cpp  functions.h  main.cpp
2_strategija/: data.cpp  data.h  functions.cpp  main.cpp
3_strategija/: data.cpp
